// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Navigation/Profile Desktop Profile 1`] = `
<div
  className="css-2rlxtj"
>
  <button
    aria-controls="menu-list-profile-menu"
    aria-expanded={false}
    aria-haspopup="menu"
    className="chakra-menu__menu-button css-1eqi7qs"
    id="menu-button-profile-menu"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="css-xl71ch"
    >
      <div
        className="chakra-stack css-192p3t8"
      >
        <p
          className="chakra-text css-x13lj8"
        >
          Logged in as:
        </p>
        <div
          className="chakra-stack css-15lgeks"
        >
          <span
            className="chakra-avatar css-vkvvxo"
          >
            <div
              aria-label="geisterfurz007#5952"
              className="chakra-avatar__initials css-0"
              role="img"
            >
              g
            </div>
            <div
              className="chakra-avatar__badge css-1plriyt"
            />
          </span>
          <p
            className="chakra-text css-8wu8jt"
          >
            geisterfurz007#5952
          </p>
        </div>
        <p
          className="chakra-text css-1aj8j1t"
        >
          Logged in as:
        </p>
      </div>
    </span>
  </button>
  <span />
</div>
`;

exports[`Storyshots Common/Navigation/Profile Mobile Profile 1`] = `
<div
  className="css-1agdl1f"
>
  <button
    aria-controls="menu-list-profile-menu"
    aria-expanded={false}
    aria-haspopup="menu"
    className="chakra-menu__menu-button css-1eqi7qs"
    id="menu-button-profile-menu"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="css-xl71ch"
    >
      <div
        className="chakra-stack css-192p3t8"
      >
        <p
          className="chakra-text css-amg4kb"
        >
          Logged in as:
        </p>
        <div
          className="chakra-stack css-15lgeks"
        >
          <span
            className="chakra-avatar css-18zvmmx"
          >
            <div
              aria-label="geisterfurz007#5952"
              className="chakra-avatar__initials css-0"
              role="img"
            >
              g
            </div>
            <div
              className="chakra-avatar__badge css-1plriyt"
            />
          </span>
          <p
            className="chakra-text css-kbn7if"
          >
            geisterfurz007#5952
          </p>
        </div>
        <p
          className="chakra-text css-1661vxi"
        >
          Logged in as:
        </p>
      </div>
    </span>
  </button>
  <span />
</div>
`;
